--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Project 1</title>
 </head>
-
 <body>
 	<h1>My awesome playlist</h1>
 	<ul id="playlist">
@@ -22,6 +20,7 @@
 		song1.innerHTML = "Blue Suede Strings, by Elvis Pagely";
 		song2.innerHTML = "Great Objects on Fire, by Jerry JSON Lewis";
 		song3.innerHTML = "I Code the Line, by Johnny JavaScript";
+		console.log(typeof song1);
 	</script>
 </body>
 
