added songs to the js structure

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -12,14 +12,20 @@
 		<li id="song_1"></li>
 		<li id="song_2"></li>
 		<li id="song_3"></li>
+		<li id="song_4"></li>
+		<li id="song_5"></li>
 	</ul>
 	<script>
 		let song1 = document.getElementById("song_1");
 		let song2 = document.getElementById("song_2");
 		let song3 = document.getElementById("song_3");
+		let song4 = document.getElementById("song_4");
+		let song5 = document.getElementById("song_5");
 		song1.innerHTML = "Blue Suede Strings, by Elvis Pagely";
 		song2.innerHTML = "Great Objects on Fire, by Jerry JSON Lewis";
 		song3.innerHTML = "I Code the Line, by Johnny JavaScript";
+		song4.innerHTML = "String or Number";
+		song5.innerHTML = "You beautiful, it's true";
 		console.log(typeof song1);
 	</script>
 </body>
